--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -20,3 +20,10 @@
     font-size: 15px;
   }
 }
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
